@@ -845,9 +845,13 @@ static int magic_rsl_to_request(request_rec *r)
 	r->content_encoding = tmp;
     }
 
-    /* detect memory allocation errors */
+    /* detect memory allocation or other errors */
     if (!r->content_type ||
 	(state == rsl_encoding && !r->content_encoding)) {
+        ap_log_rerror(APLOG_MARK, APLOG_NOERRNO | APLOG_ERR, 0, r,
+                      MODNAME ": unexpected state %d; could be caused by bad "
+                      "data in magic file",
+                      state);
 	return HTTP_INTERNAL_SERVER_ERROR;
     }
 
